boinc (6.10.58+dfsg-4) experimental; urgency=low

  * Added boinc-server package, work mostly done
    by Frank Thomas a few years back.

 -- Steffen Moeller <moeller@debian.org>  Sun, 05 Dec 2010 20:05:52 +0100

boinc (6.10.58+dfsg-3) unstable; urgency=low

  [ Steffen Moeller ]
  * Added -client dependency on util-linux,
    many thanks to Sandro for this (Closes: #537695)
  * Bumped policy to 3.9.1.0
  * Added the first graphical libraries as suggested
    dependencies of the boinc-manager package.

  [ Daniel Hahler ]
  * debian/boinc-client.init: wait until BOINC has ended for "stop"
    action. This fixes the post-removal script to be run too early,
    when the system user might be still logged in and cannot be
    deleted (LP: #583434). It also fixes the "restart" action.
  * debian/boinc-client.init: schedule: do not fail if chrt fails
    (LP: #629649).

 -- Daniel Hahler <ubuntu@thequod.de>  Sun, 19 Sep 2010 00:18:08 +0200

boinc (6.10.58+dfsg-2) unstable; urgency=low

  [ Daniel Hahler ]
  * Use chrt instead of schedtool (LP: #527639)
    - debian/control, debian/boinc-client.init
  [ Steffen Moeller ]
  * Removed from source tree for DFSG compliance
    - samples/glut
  * Adopted source format 3.0 (quilt)

 -- Daniel Hahler <ubuntu@thequod.de>  Sat, 17 Jul 2010 22:08:09 +0200

boinc (6.10.58+dfsg-1) unstable; urgency=low

  [ Steffen Moeller ]
  * Adopted Daniel's changes for Debian, added him to
    uploaders.
  * Allowed DM-Upload (for Daniel)
  * Eye candy in debian/README* and debian/po*
  * Updated my email address
  * Update standards-version to 3.9.0 (No changes needed)

  [ Daniel Hahler ]
  * Refresh patches, especially 006_correct_catalog_path.patch
  * New upstream release
  * Check that files exist on which we tweak permissions
    during post-installation
  * Bump build-depend on debhelper to install udev rules into
    /lib/udev/rules.d, add Breaks on udev to get correct version.