@@ -33,3 +33,4 @@ autom4te.cache/
 autoreconf-stamp
 */*.po
 version.h
+.gitignore
