@@ -37,7 +37,7 @@ Description: metapackage for the BOINC client and the manager
 Package: boinc-client
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, python (>= 2.3), adduser,
- lsb-base (>= 3.0-6), ca-certificates, util-linux
+ lsb-base (>= 3.0-6), ca-certificates
 Suggests: boinc-app-seti, boinc-manager
 Breaks: udev (<< 136-1)
 Description: core client for the BOINC distributed computing infrastructure
